--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="theme-color" content="#ED1C24">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-    <title>OTG Web</title>
+    <title>React Webpack Bp</title>
 
   </head>
   <body>
